--- a/scalabase/Dockerfile
+++ b/scalabase/Dockerfile
@@ -3,7 +3,7 @@ from openjdk:8
 USER root
 EXPOSE 22/tcp
 EXPOSE 22/udp
-
+# Sample change extra line
 # In China, apt-get did not work, you should add follow order to change your mirror.
 # RUN sed -i 's/http:\/\/archive\.ubuntu\.com\/ubuntu\//http:\/\/mirrors\.163\.com\/ubuntu\//g' /etc/apt/sources.list
 
